# screenshot-rs

./: Cargo.toml  README.md
src/: image.rs  main.rs  save.rs
src/capture/: mod.rs  x11.rs
src/ui/: mod.rs  window.rs
