[package]
name = "screenshot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
xcb = "^1.4.0"
anyhow = { version = "^1.0.86", features = ["backtrace"] }
thiserror = "^1.0.63"
eframe = {version="^0.28.1", default-features=false, features = ["default_fonts", "glow", "wayland", "x11"]}
image = {version = "^0.25", default-features=false, features = ["png"]}
